--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,10 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/numbers/
+    - assets/images/family_members/
+    - assets/images/colors/
 
   # fonts:
   #   - family: Schyler
