--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,15 @@ environment:
   sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
+  audioplayers: ^6.0.0
+  cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.6
-
 dev_dependencies:
+  flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
@@ -27,7 +26,6 @@ flutter:
     - assets/images/numbers/
     - assets/images/family_members/
     - assets/images/colors/
-
   # fonts:
   #   - family: Schyler
   #     fonts:
